# esp32_examples

./: .gitignore
blink/: .clang-format  README.md  sdkconfig
blink/main/: blink.c  idf_component.yml
cpp_demo/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
cpp_demo/main/: CMakeLists.txt  cpp_demo.cpp  ws2812_task.cpp  ws2812_task.h
esp32-s3/led_blink/: CMakeLists.txt
esp32-s3/led_blink/main/: CMakeLists.txt  led_blink.c
freertos_demo/task_demo/: .clang-format  CMakeLists.txt  sdkconfig
freertos_demo/task_demo/main/: CMakeLists.txt  task_demo.c
helloworld/: sdkconfig
helloworld/main/: CMakeLists.txt  main.c
lcd_demo/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
lcd_demo/main/: CMakeLists.txt  lcd_demo.c
led_blick/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.old
lvgl_demo/: CMakeLists.txt  sdkconfig.defaults
lvgl_demo/main/: CMakeLists.txt  lvgl_demo.c
serial_protocol_demo/: .clang-format  CMakeLists.txt
serial_protocol_demo/src/: CMakeLists.txt  app_main.cpp
serial_protocol_demo/src/led/: led.cpp  led.h
serial_protocol_demo/src/serial_protocol/: serial_protocol.cpp  serial_protocol.h
serial_protocol_demo/src/uart_init/: uart_init.cpp  uart_init.h
uart_base_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
uart_base_test/main/: CMakeLists.txt  uart_base_test.c  xtp_random.c  xtp_random.h
ws2812_demo/: CMakeLists.txt  sdkconfig  sdkconfig.old
ws2812_demo/components/ws2812_control/: CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  README_EN.md  (+2 more)
ws2812_demo/main/: CMakeLists.txt  main.c
(+1 files in other folders)
